# estc-parser

./: .gitattributes  README.rst  pyproject.toml  requirements.txt
estc_parser/: cli.py  parser.py
estc_parser/utils/: config.py
input_html/: help.txt
output/: results.csv
output_csv/: help.txt
src/estc_parser/utils/: config.py  logtime.py
tests/: test_estc_parser.py
tests/sample_expected/: allfiles_df.pkl  file1_df.pkl
tests/sample_input/: file1.html
