[tool.poetry]
name = "estc-parser"
version = "0.1.0"
description = "package to parse html downloaded from the english short title catalogue"
authors = ["parisac <alex.charles.paris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "1.0.1"
beautifulsoup4 = "^4.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
